# amsgpack

./: .clang-format  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  amsgpack.c  amsgpack.pyi  build.ninja  common.h  coverage.sh  deque.h  ext.h  file_unpacker.h  format.sh  fuzzer.sh  macros.h  packb.h  pyproject.toml  raw.h  setup.py  test_amsgpack.py  timestamp.h  unpacker.h
.github/workflows/: ci.yml  release.yml
amsgpack/: __init__.py  _amsgpack.pyi
benchmark/: amsgpack_benchmark.py  chart.py  file_statistics.py
doc/: conf.py  index.rst
src/: amsgpack.c  file_unpacker.h  packb.h  raw.h  unpacker.h
test/: failing_malloc.py  test_amsgpack.py  test_ext.py  test_file_unpacker.py  test_pack.py  test_suite.py  test_timestamp.py  test_unpack.py
