[build-system]
requires = ["setuptools>=74.1"]
build-backend = "setuptools.build_meta"

[project]
name = "amsgpack"
version = "0.0.2"
authors = [
  { name="Arseniy Terekhin", email="senyai@gmail.com" },
]
description = "Another MessagePack library"
license = {text = "MIT"}
requires-python = ">=3.10"
[[tool.setuptools.ext-modules]]
name = "amsgpack"
sources = ["amsgpack.c"]
include-dirs = ["."]
py-limited-api = true
extra-compile-args = ["-O3", "-Werror", "-Wall", "-Wextra", "-Wdouble-promotion"]
[tool.setuptools.package-data]
"amsgpack" = ["py.typed"]
[tool.black]
line-length = 79